include/suji_core.h

/* suji_core — CEF 무관 임베드 코어 C ABI.
 *
 * `zig build lib [-Dtarget=<triple>]` 가 만드는 libsuji_core.a 의 export 표면.
 * 호스트(iOS Swift / Android JNI / 임의 네이티브 셸)가 include 하고 정적 링크.
 *
 * 구현: src/embed.zig. 이 헤더는 수기 동기화 대상 — export 추가 시 함께 갱신.
 *
 * 수명주기: suji_core_init() 1회 → invoke/emit/on … → suji_core_destroy().
 * 스레드: 단일 스레드 호스트 가정(독립 std.Io.Threaded single-threaded).
 */
#ifndef SUJI_CORE_H
#define SUJI_CORE_H

#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

/* 코어 초기화. 0=성공, -1=실패(suji_core_last_error 로 사유). */
int suji_core_init(void);

/* 마지막 suji_core_* 실패의 사람이 읽는 사유. 실패 없으면 "".
 * 정적 포인터 — free 금지, 다음 실패 호출 전까지 유효. */
const char *suji_core_last_error(void);

/* 코어 해제. init 전/후 idempotent(미초기화면 no-op). */
void suji_core_destroy(void);

/* 프론트엔드 invoke 디스패치.
 * channel: 라우팅 채널명. json: 요청 JSON(널종단).
 * 반환: 응답 JSON(널종단, 코어 소유). 사용 후 반드시 suji_core_free 로 해제.
 *       미초기화 시 빈 문자열("").
 */
const char *suji_core_invoke(const char *channel, const char *json);

/* suji_core_invoke 반환 포인터 해제. NULL/미초기화는 no-op. */
void suji_core_free(const char *ptr);

/* 호스트 invoke 핸들러.
 * channel/json 은 널종단(코어 소유, 콜백 동안만 유효).
 * 반환: 응답 JSON(널종단, 호스트 소유) 또는 NULL(미처리 → 백엔드로 폴백).
 */
typedef const char *(*suji_core_handler_cb)(const char *channel, const char *json);
/* 위 콜백이 반환한 포인터 해제(코어가 복사 후 호출). NULL 이면 호스트가 미관리. */
typedef void (*suji_core_handler_free_cb)(const char *ptr);

/* 채널을 네이티브로 응답하도록 등록 (채널명 == 등록명 정확 매치).
 * dlopen 백엔드 없는 모바일에서 invoke 를 의미있게 만든다.
 * 같은 채널 재등록은 에러가 아니라 덮어쓰기. 0=성공, -1=실패(미초기화/메모리).
 */
int suji_core_register_handler(const char *channel,
                               suji_core_handler_cb invoke_cb,
                               suji_core_handler_free_cb free_cb);

/* 이벤트 발행(전 창 브로드캐스트). */
void suji_core_emit(const char *event_name, const char *json);

/* 특정 창(WindowManager id)에만 이벤트 발행. */
void suji_core_emit_to(uint32_t target, const char *event_name, const char *json);

/* 이벤트 콜백 — event_name/data 는 널종단, arg 는 suji_core_on 에 넘긴 값. */
typedef void (*suji_core_event_cb)(const char *event_name,
                                   const char *data,
                                   void *arg);

/* 이벤트 구독. 반환: 리스너 id(0=실패/미초기화). */
uint64_t suji_core_on(const char *event_name, suji_core_event_cb callback, void *arg);

/* 리스너 해제. */
void suji_core_off(uint64_t listener_id);

#ifdef __cplusplus
}
#endif

#endif /* SUJI_CORE_H */